--- a/tool/gainos-studio/ui/forms/cd_cannm.ui
+++ b/tool/gainos-studio/ui/forms/cd_cannm.ui
@@ -234,7 +234,11 @@ p, li { white-space: pre-wrap; }
               </size>
              </property>
              <property name="toolTip">
-              <string>Only Physical is allowed Now!</string>
+              <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Consolas'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Upper layer Nm.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
            </item>
@@ -394,7 +398,7 @@ p, li { white-space: pre-wrap; }
                 </size>
                </property>
                <property name="toolTip">
-                <string>Only Physical is allowed Now!</string>
+                <string/>
                </property>
               </widget>
              </item>
@@ -421,7 +425,7 @@ p, li { white-space: pre-wrap; }
                 </size>
                </property>
                <property name="toolTip">
-                <string>Only Physical is allowed Now!</string>
+                <string/>
                </property>
               </widget>
              </item>
@@ -512,7 +516,7 @@ Vector Position:</string>
                 </size>
                </property>
                <property name="toolTip">
-                <string>Only Physical is allowed Now!</string>
+                <string/>
                </property>
                <item>
                 <property name="text">
@@ -551,7 +555,7 @@ Vector Position:</string>
                 </size>
                </property>
                <property name="toolTip">
-                <string>Only Physical is allowed Now!</string>
+                <string/>
                </property>
                <item>
                 <property name="text">
