--- a/tool/gainos-studio/ui/forms/cd_os.ui
+++ b/tool/gainos-studio/ui/forms/cd_os.ui
@@ -397,7 +397,7 @@ p, li { white-space: pre-wrap; }
       <x>450</x>
       <y>20</y>
       <width>481</width>
-      <height>401</height>
+      <height>411</height>
      </rect>
     </property>
     <property name="whatsThis">
@@ -413,13 +413,69 @@ p, li { white-space: pre-wrap; }
      <attribute name="title">
       <string>Task</string>
      </attribute>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QTreeWidget" name="trTaskAppModeDst">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>24</y>
+        <y>230</y>
+        <width>211</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <column>
+       <property name="text">
+        <string>Assigned AppMode</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QTreeWidget" name="trTaskAppModeSrc">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>230</y>
+        <width>201</width>
+        <height>141</height>
+       </rect>
+      </property>
+      <column>
+       <property name="text">
+        <string notr="true">Available AppMode</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QWidget" name="layoutWidget_11">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>260</y>
+        <width>31</width>
+        <height>66</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_8">
+       <item row="0" column="0">
+        <widget class="QPushButton" name="btnTaskModeAdd">
+         <property name="text">
+          <string>&lt;&lt;</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QPushButton" name="btnTaskModeDel">
+         <property name="text">
+          <string>&gt;&gt;</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>11</x>
+        <y>25</y>
         <width>458</width>
-        <height>223</height>
+        <height>192</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -565,47 +621,25 @@ p, li { white-space: pre-wrap; }
         </layout>
        </item>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_9">
+        <layout class="QHBoxLayout" name="horizontalLayout_20">
          <item>
-          <widget class="QLabel" name="label_28">
+          <widget class="QCheckBox" name="cbxTskPreemtable">
            <property name="text">
-            <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Consolas'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Task Mode:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>Task Preemtable</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="cmbxTskMode">
-           <property name="minimumSize">
-            <size>
-             <width>300</width>
-             <height>0</height>
-            </size>
-           </property>
+          <widget class="QCheckBox" name="cbxTaskAutostart">
            <property name="toolTip">
             <string/>
            </property>
-           <property name="currentIndex">
-            <number>0</number>
+           <property name="text">
+            <string>Task Autostart</string>
            </property>
-           <item>
-            <property name="text">
-             <string>OSDEFAULTAPPMODE</string>
-            </property>
-           </item>
           </widget>
          </item>
         </layout>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="cbxTskPreemtable">
-         <property name="text">
-          <string>Task Preemtable</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
