--- a/tool/gainos-studio/ui/forms/cd_os.ui
+++ b/tool/gainos-studio/ui/forms/cd_os.ui
@@ -74,7 +74,7 @@
          </item>
          <item>
           <property name="text">
-           <string>EXTEND</string>
+           <string>EXTENDED</string>
           </property>
          </item>
         </widget>
@@ -455,6 +455,18 @@ p, li { white-space: pre-wrap; }
       <layout class="QGridLayout" name="gridLayout_8">
        <item row="0" column="0">
         <widget class="QPushButton" name="btnTaskModeAdd">
+         <property name="minimumSize">
+          <size>
+           <width>29</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>29</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
           <string>&lt;&lt;</string>
          </property>
@@ -462,6 +474,12 @@ p, li { white-space: pre-wrap; }
        </item>
        <item row="1" column="0">
         <widget class="QPushButton" name="btnTaskModeDel">
+         <property name="maximumSize">
+          <size>
+           <width>29</width>
+           <height>16777215</height>
+          </size>
+         </property>
          <property name="text">
           <string>&gt;&gt;</string>
          </property>
@@ -469,7 +487,7 @@ p, li { white-space: pre-wrap; }
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>11</x>
