--- a/tool/gainos-studio/ui/forms/cd_os.ui
+++ b/tool/gainos-studio/ui/forms/cd_os.ui
@@ -416,7 +416,7 @@ p, li { white-space: pre-wrap; }
      <string notr="true">font: 12pt &quot;Consolas&quot;;</string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="tabTask">
      <attribute name="title">
@@ -1260,7 +1260,7 @@ p, li { white-space: pre-wrap; }
          <item>
           <widget class="QLineEdit" name="leAlarmCbk">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="toolTip">
             <string/>
